--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,8 @@ body {
       background-color: gray;
       color: blue
     }
+    
+    .kamClass {
+      background-color: magenta;
+      color: white;
+    }
